# vlm_creation

./: .gitignore  check_dims.py  hf_authorization.md  inference.py  projections.py  pyproject.toml  train.py
config/: settings.py
data/: processor.py
inference/: inference.py
model/: vlm_model.py
results/runs/Jan28_20-03-54_server-gpu/: events.out.tfevents.1738058635.server-gpu.3174614.0
train/: trainer.py
